# mate

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  analysis_options.yaml  go.mod  main.go  pubspec.yaml
example/: app.dart  main.dart
lib/: calculator.go  calculator_test.go  lexer.go  lexer_test.go  mate.dart  mate.go  mate_test.go  token.go  token_test.go
lib/src/: basic.dart  dev_utils.dart  expression.dart  expression_parser.dart  lexer.dart  tokens.dart  validators.dart
pkg/: errors.go  validators.go  validators_test.go
repl/: Cargo.toml  repl.go
repl/src/: main.rs
src/: calculator.rs  errors.rs  lexer.rs  lib.rs  main.rs  mate.rs  monitor.rs  token.rs  utils.rs
src/lib/: calculator.rs  environment.rs  errors.rs  lexer.rs  lib.rs  mate.rs  monitor.rs  token.rs  utils.rs
test/: mate_test.dart
test/src/: dev_utils_test.dart  expression_parser_test.dart  expression_test.dart  lexer_test.dart  tokens_test.dart  validators_test.dart
