[package]
name = "mate-rs"
version = "0.1.4"
edition = "2021"
authors = ["me@theiskaa.com"]
description = "A simple and lightweight arithmetic expression interpreter"
readme = "README.md"
homepage = "https://github.com/theiskaa/mate"
repository = "https://github.com/theiskaa/mate"
license-file = "LICENSE"
keywords = ["interpreter", "parser", "calculator"]

[dependencies]
