[package]
name = "mate-rs"
version = "0.2.1"
edition = "2021"
authors = ["me@theiskaa.com"]
description = "A simple and lightweight arithmetic expression interpreter"
readme = "README.md"
homepage = "https://github.com/theiskaa/mate"
repository = "https://github.com/theiskaa/mate"
license-file = "LICENSE"
keywords = ["interpreter", "parser", "calculator"]

[lib]
name = "mate_rs"
path = "src/lib/lib.rs"

[[bin]]
name = "mate"
path = "src/bin/main.rs"

[dependencies]
colored = "2.0.0"
